Fix button border contrast.

--- a/assets/sass/buttons.scss
+++ b/assets/sass/buttons.scss
@@ -70,7 +70,7 @@ a > svg:not(:last-child) {
 
   color: var(--color-foreground);
   background: var(--color-bg);
-  border: 1px solid var(--color-border);
+  border: 1px solid var(--color-border-med);
 
   &:hover {
     color: var(--color-primary);
